# ThreeBody

./: .gitignore  CMakeLists.txt  README.md
Headers/: eulerObject.h  object.h  scene.h  vector.h
Source/: eulerObject.cpp  gravity.cpp  object.cpp  scene.cpp  vector.cpp
tests/: test_object.cpp  test_scene.cpp  test_vector.cpp
